--- a/login.html
+++ b/login.html
@@ -31,10 +31,17 @@
           </div>
         </form>
         <a href="./" class="forgot--password">Esqueci minha senha</a>
-        <p class="copyright">Desenvolvido por <a href="./">nexola ⤤</a></p>
+        <p class="copyright">
+          Desenvolvido por
+          <a
+            href="https://www.linkedin.com/in/vitor-vianna-a53075215/"
+            target="_blank"
+            >nexola ⤤</a
+          >
+        </p>
       </div>
       <div class="container--bg">
-        <img src="./assets/bg-login.png" alt="" class="bg--login" />
+        <img src="./assets/bg-login.jpg" alt="" class="bg--login" />
       </div>
     </main>
   </body>
