--- a/login.html
+++ b/login.html
@@ -26,7 +26,10 @@
           <div class="btns--login">
             <a href="./" class="btn--cadastro btn">Novo usuário?</a>
             <a href="./" class="btn--login"
-              ><img src="./assets/enter-arrow-white.svg" alt=""
+              ><img
+                src="./assets/enter-arrow-white.svg"
+                class="arrow-enter"
+                alt=""
             /></a>
           </div>
         </form>
