--- a/signup.html
+++ b/signup.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>APortfolioI - Login</title>
+    <title>APortfolioI - Cadastro</title>
   </head>
-  <body>
+  <body id="signup">
     <main class="main--container">
       <div class="container--form">
         <div class="logo--container">
           <img src="./assets/logo.svg" alt="APortfolioI" class="img--logo" />
         </div>
-        <form action="" class="form--login">
+        <form action="" class="form--signup">
+          <div class="input">
+            <label for="name">Nome</label>
+            <input type="text" id="name" name="name" />
+          </div>
+
           <div class="input">
             <label for="email">Email</label>
             <input type="email" id="email" name="email" />
@@ -24,16 +29,12 @@
           </div>
 
           <div class="btns--login">
-            <a href="./signup.html" class="btn--cadastro btn">Novo usuário?</a>
-            <a href="./" class="btn--login"
-              ><img
-                src="./assets/enter-arrow-white.svg"
-                class="arrow-enter"
-                alt=""
-            /></a>
+            <a href="./login.html" class="btn--voltar">
+              <img src="./assets/enter-arrow-white.svg" alt="" />
+            </a>
+            <a href="./" class="btn--cadastro btn">Cadastrar</a>
           </div>
         </form>
-        <a href="./" class="forgot--password">Esqueci minha senha</a>
         <p class="copyright">
           Desenvolvido por
           <a
