--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         </div>
         <form action="" class="form--login">
           <div class="input">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" />
+            <label for="email-login">Email</label>
+            <input type="email" id="email-login" name="email" />
           </div>
 
           <div class="input">
-            <label for="password">Senha</label>
-            <input type="password" id="password" name="password" />
+            <label for="password-login">Senha</label>
+            <input type="password" id="password-login" name="password" />
           </div>
 
           <div class="btns--login">
@@ -33,7 +33,9 @@
             /></a>
           </div>
         </form>
-        <a href="./" class="forgot--password">Esqueci minha senha</a>
+        <a href="./password-recover.html" class="forgot--password"
+          >Esqueci minha senha</a
+        >
         <p class="copyright">
           Desenvolvido por
           <a
