--- a/password-recover.html
+++ b/password-recover.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>APortfolioI - Cadastro</title>
   </head>
-  <body id="signup">
+  <body id="pass-recover">
     <main class="main--container">
       <div class="container--form">
         <div class="logo--container">
@@ -14,35 +14,19 @@
         </div>
         <form action="" class="form--signup">
           <div class="input">
-            <label for="name">Nome</label>
-            <input type="text" id="name" name="name" />
+            <label for="email-recover">Insira seu email para recuperar a senha</label>
+            <input type="email" id="email-recover" name="email" />
           </div>
-
-          <div class="input">
-            <label for="email-signup">Email</label>
-            <input type="email" id="email-signup" name="email" />
-          </div>
-
-          <div class="input">
-            <label for="password-signup">Senha</label>
-            <input type="password" id="password-signup" name="password" />
-          </div>
+          
 
           <div class="btns--login">
             <a href="./index.html" class="btn--voltar">
               <img src="./assets/enter-arrow-white.svg" alt="" />
             </a>
-            <a href="./" class="btn--cadastro btn">Cadastrar</a>
+            <a href="./" class="btn--recover btn">Enviar token</a>
           </div>
+        </div>
         </form>
-        <p class="copyright">
-          Desenvolvido por
-          <a
-            href="https://www.linkedin.com/in/vitor-vianna-a53075215/"
-            target="_blank"
-            >nexola ⤤</a
-          >
-        </p>
       </div>
       <div class="container--bg">
         <img src="./assets/bg-login.jpg" alt="" class="bg--login" />
