--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>APortfolioI - Login</title>
   </head>
-  <body>
+  <body id="login">
     <main class="main--container">
       <div class="container--form">
         <div class="logo--container">
