new password, home header

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               ><img
                 src="./assets/enter-arrow-white.svg"
                 class="arrow-enter"
-                alt=""
+                width="32px"
             /></a>
           </div>
         </form>
