--- a/new-password.html
+++ b/new-password.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>APortfolioI - Recuperação de senha</title>
+    <title>APortfolioI - Nova senha</title>
   </head>
   <body id="pass-recover">
     <main class="main--container">
@@ -12,18 +12,21 @@
         <div class="logo--container">
           <img src="./assets/logo.svg" alt="APortfolioI" class="img--logo" />
         </div>
-        <form action="" class="form--pass-recover">
+        <form action="" class="form--new-password">
           <div class="input">
-            <label for="email-recover">Insira seu email para recuperar a senha</label>
-            <input type="email" id="email-recover" name="email" />
-          </div>
+                <label for="new-password">Nova senha</label>
+                <input type="password" id="new-password" name="new-password" />
+            </div>
+            <div class="input">
+                <label for="password-confirm">Repita a senha</label>
+                <input type="password" id="password-confirm" name="password-confirm" />
+            </div>
           
-
           <div class="btns--login">
             <a href="./index.html" class="btn--voltar">
-              <img src="./assets/enter-arrow-white.svg" alt="" width="32px" />
+                <img src="./assets/enter-arrow-white.svg" alt="" width="32px" />
             </a>
-            <a href="./" class="btn--recover btn">Enviar token</a>
+            <a href="./" class="btn--new-password btn">Redefinir senha</a>
           </div>
         </div>
         </form>
