--- a/signup.html
+++ b/signup.html
@@ -30,7 +30,7 @@
 
           <div class="btns--login">
             <a href="./index.html" class="btn--voltar">
-              <img src="./assets/enter-arrow-white.svg" alt="" />
+              <img src="./assets/enter-arrow-white.svg" alt="" width="32px" />
             </a>
             <a href="./" class="btn--cadastro btn">Cadastrar</a>
           </div>
