--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
               <a href="" class="copy-link"></a>
             </div>
           </div>
-          <a href="" class="signout"></a>
+          <a href="./index.html" class="signout"></a>
         </header>
         <nav>
           <ul class="navigation">
@@ -35,6 +35,33 @@
             <li><a href="./">FOOTER</a></li>
           </ul>
         </nav>
+        <form action="" class="form--header form--active form--home">
+          <div class="row--input">
+            <div class="input">
+              <label for="title">Título</label>
+              <input type="text" id="title" name="title" />
+            </div>
+            <div class="input">
+              <label for="state">Estado</label>
+              <input type="text" id="state" name="state" />
+            </div>
+          </div>
+          <div class="row--textarea">
+            <div class="input">
+              <label for="summary">Apresentação</label>
+              <textarea
+                name="summary"
+                id="summary"
+                cols="30"
+                rows="10"
+                class="text-area"
+              ></textarea>
+            </div>
+          </div>
+        </form>
+        <a href="./home.html" class="btn btn--att-portfolio"
+          >Atualizar Portfólio</a
+        >
       </div>
     </main>
   </body>
