--- a/password-recover.html
+++ b/password-recover.html
@@ -23,7 +23,7 @@
             <a href="./index.html" class="btn--voltar">
               <img src="./assets/enter-arrow-white.svg" alt="" width="32px" />
             </a>
-            <a href="./" class="btn--recover btn">Enviar token</a>
+            <a href="./new-password.html" class="btn--recover btn">Enviar token</a>
           </div>
         </div>
         </form>
