--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
           <div class="btns--login">
             <a href="./signup.html" class="btn--cadastro btn">Novo usuário?</a>
-            <a href="./" class="btn--login"
+            <a href="./home.html" class="btn--login"
               ><img
                 src="./assets/enter-arrow-white.svg"
                 class="arrow-enter"
